--- a/Baha'i/Baha/TOB/Contents.html
+++ b/Baha'i/Baha/TOB/Contents.html
@@ -8,6 +8,22 @@
 <html>
 <head>
 	<title>Tablets of Bahá'u'lláh, Contents</title>
+
+<style>
+.dot-div {
+  border-bottom:dotted 2px black;
+  width: 100%;
+  height: 14px
+}
+.text-div {
+  margin-top: -14px
+}
+.text-span {
+  background: #fff;
+  padding-right: 5px
+}
+</style>
+	
 </head>
 
 <body>
@@ -39,107 +55,187 @@
 <center><h2>CONTENTS</h2></center><p>
 
 <blockquote>
-<table border="0" cellspacing="2" cellpadding="0" WIDTH="90%" bgcolor="">
+<table border="0" cellspacing="2" cellpadding="0" WIDTH="95%" bgcolor="">
+
 <tr>
-       <td width="80%" VALIGN=top></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=bottom><i><div align="right">Page</div></i></td>
+       <td width="95%" VALIGN=top></td>
+       <td VALIGN=bottom><i><div align="right">Page</div></i></td>
+</tr>
+
+
+
+<tr>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>1. Lawh-i-Karmil (Tablet of Carmel)</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p001-270TOB.html#p1">1</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>1. Lawh-i-Karmil (Tablet of Carmel) </b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p001-270TOB.html#p1">1</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>2. Lawh-i-Aqdas (The Most Holy Tablet)</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p001-270TOB.html#p7">7</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>2. Lawh-i-Aqdas (The Most Holy Tablet) </b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p001-270TOB.html#p7">7</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>3. Bishárát (Glad-Tidings)</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p001-270TOB.html#p19">19</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>3. Bishárát (Glad-Tidings)</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p001-270TOB.html#p19">19</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>4. Tarázát (Ornaments)</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p001-270TOB.html#p31">31</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>4. Tarázát (Ornaments)</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p001-270TOB.html#p31">31</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>5. Tajallíyát (Effulgences)</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p001-270TOB.html#p45">45</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>5. Tajallíyát (Effulgences)</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p001-270TOB.html#p45">45</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>6. Kalimát-i-Firdawsíyyih (Words of Paradise)</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p001-270TOB.html#p55">55</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>6. Kalimát-i-Firdawsíyyih (Words of Paradise) </b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p001-270TOB.html#p55">55</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>7. Lawh-i-Dunyá (Tablet of the World)</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p001-270TOB.html#p81">81</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>7. Lawh-i-Dunyá (Tablet of the World)</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p001-270TOB.html#p81">81</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>8. Ishráqát (Splendours)</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p001-270TOB.html#p99">99</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>8. Ishráqát (Splendours) </b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p001-270TOB.html#p99">99</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>9. Lawh-i-Hikmat (Tablet of Wisdom)</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p001-270TOB.html#p135">135</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>9. Lawh-i-Hikmat (Tablet of Wisdom)</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p001-270TOB.html#p135">135</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>10. Asl-i-Kullu'l-Khayr (Words of Wisdom)</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p001-270TOB.html#p153">153</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>10. Asl-i-Kullu'l-Khayr (Words of Wisdom)</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p001-270TOB.html#p153">153</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>11. Lawh-i-Maqsúd (Tablet of Maqsúd)</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p001-270TOB.html#p159">159</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>11. Lawh-i-Maqsúd (Tablet of Maqsúd)</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p001-270TOB.html#p159">159</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>12. Súriy-i-Vafá (Tablet to Vafá)</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p001-270TOB.html#p179">179</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>12. Súriy-i-Vafá (Tablet to Vafá)</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p001-270TOB.html#p179">179</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>13. Lawh-i-Siyyid-i-Mihdíy-i-Dahají (Tablet to Siyyid Mihdíy-i-Dahají)</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p001-270TOB.html#p193">193</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>13. Lawh-i-Siyyid-i-Mihdíy-i-Dahají (Tablet to Siyyid Mihdíy-i-Dahají)</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p001-270TOB.html#p193">193</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>14. Lawh-i-Burhán (Tablet of the Proof)</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p001-270TOB.html#p203">203</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>14. Lawh-i-Burhán (Tablet of the Proof)</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p001-270TOB.html#p203">203</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>15. Kitáb-i-Ahd (Book of the Covenant)</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p001-270TOB.html#p217">217</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>15. Kitáb-i-Ahd (Book of the Covenant)</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p001-270TOB.html#p217">217</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>16. Lawh-i-Ard-i-Bá (Tablet of the Land of Bá)</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p001-270TOB.html#p225">225</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>16. Lawh-i-Ard-i-Bá (Tablet of the Land of Bá)</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p001-270TOB.html#p225">225</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>17. Excerpts from Other Tablets</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p001-270TOB.html#p229">229</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>17. Excerpts from Other Tablets</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p001-270TOB.html#p229">229</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>Notes</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p271-276Notes.html">271</a></div></td>
 </tr>
 <tr>
-       <td width="80%" VALIGN=top><b>Notes</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p271-276Notes.html">271</a></div></td>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><b>Index</b></span>
+       </div>
+	   </td>
+       <td><div align="right"><a href="p277-299Index.html">277</a></div></td>
 </tr>
-<tr>
-       <td width="80%" VALIGN=top><b>Index</b><p></td>
-       <td width="0%"></td>
-       <td width="20%" VALIGN=top><div align="right"><a href="p277-299Index.html">277</a></div></td>
-</tr>
+
 </table>
 </blockquote>
 
