--- a/Baha'i/Baha/TOB/p001-270TOB.html
+++ b/Baha'i/Baha/TOB/p001-270TOB.html
@@ -46,7 +46,7 @@
 	</td>
 	<td VALIGN=top width="20%"><small>
 	<hr>
-	<i>Gleanings from the Writings of Bahá'u'lláh</i>, <a href="../GL/p003-346.html#XI">XI</a>; <i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para292">p. 219</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p351-367Ch23.html">ch. 23</a>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Lawh-i-Karmil"><i>Lawh-i-Karmil</i></a>]
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">1</DIV></center><p></small></td>
 </tr>
@@ -128,7 +128,7 @@
 	<td VALIGN=top><small>
 	1.	Sometimes referred to as <i>Tablet to the Christians</i>.<p>
 	<hr>
-	<i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p001-031Ch01.html#p11">p. 11</a>; vol. 4 <a href="../../Others/ROB/V4/p227-238Ch16.html#p227">p. 227</a>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Lawh-i-Aqdas"><i>Lawh-i-Aqdas</i></a>]
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">7</DIV></center><p></small></td>
 </tr>
@@ -395,7 +395,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p161-167Ch10.html">ch. 10</a>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Bishárát"><i>Bishárát</i></a>]
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">19</DIV></center><p></small></td>
 </tr>
@@ -599,7 +599,7 @@
 	1. Jesus.
 	<hr>
 	<i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p343-370Ch16.html#p353">p. 353</a>; vol. 4 <a href="../../Others/ROB/V4/p161-167Ch10.html#p163">p. 163</a><p>
-	[monasticism] <i>The Kitab-i-Aqdas</i>, <a href="../KA/p019-088Aqdas.html#para36">&para;36</a>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#ClergyMonasticism">monasticism</a>]
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -619,7 +619,7 @@
 	<td VALIGN=top><small>
 	<hr>
 	<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p161-167Ch10.html#p164">p. 164</a><p>
-	[confession of sins] <i>The Kitab-i-Aqdas</i>, <a href="../KA/p019-088Aqdas.html#para34">&para;34</a>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Sin,ConfessionOf">confession of sins</a>]
 
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
@@ -855,7 +855,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p168-176Ch11.html">ch. 11</a>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Tarázát"><i>Tarázát</i></a>]
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">31</DIV></center><p></small></td>
 </tr>
@@ -1285,7 +1285,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p108-132Ch06.html#p120">p. 120n</a>; vol. 4 <a href="../../Others/ROB/V4/p118-144Ch08.html">ch. 8</a>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Tajallíyát"><i>Tajallíyát</i></a>]
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">45</DIV></center><p></small></td>
 </tr>
@@ -1557,7 +1557,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p214-226Ch15.html">ch. 15</a>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Kalimát-i-Firdawsíyyih"><i>Kalimát-i-Firdawsíyyih</i></a>]
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">55</DIV></center><p></small></td>
 </tr>
@@ -2197,6 +2197,8 @@
 	</td>
 	<td VALIGN=top><small>
 	1. Muhammad Javád-i-Qazvíní, upon whom Bahá'u'lláh bestowed the title Ismu'lláhi'l-Júd (The Name of God, Bounty). He transcribed numerous Tablets of Bahá'u'lláh during His Ministry, but subsequently broke the Covenant. (See <i>God Passes By</i> pages <a href="../../SE/GPB/p235-320ThirdPeriod.html#p247">247</a> and <a href="../../SE/GPB/p235-320ThirdPeriod.html#p319">319</a>.)
+	<hr>
+	<a href="#para647">Tablet to Muhammad-Javád-i-Qazvíní</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -2732,7 +2734,7 @@
 	<td VALIGN=top><small>
 	1. Jamálu'd-Dín-i-Afghání. (See <i>God Passes By</i> pp.<a href="../../SE/GPB/p235-320ThirdPeriod.html#para121">296</a>, 317.)
 	<hr>
-	[Urvatu'l-Vuthqá] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p391-412Ch25.html#p401">p. 401</a>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#'Urvatu'l-Vuthqá,newspaper">Urvatu'l-Vuthqá</a>]
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">95</DIV></center><p></small></td>
 </tr>
@@ -2808,7 +2810,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a>, <a href="../../SE/GPB/p321-401FourthPeriod.html#para123">p. 383</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p145-160Ch09.html">ch. 9</a>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Ishráqát"><i>Ishráqát</i></a>]
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">99</DIV></center><p></small></td>
 </tr>
@@ -3667,7 +3669,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para292">p. 219</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../../Others/ROB/V1/p018-044Ch03.html#p20">p. 20</a>; vol. 4 <a href="../../Others/ROB/V4/p033-049Ch03.html">ch. 3</a>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Lawh-i-Hikmat"><i>Lawh-i-Hikmat</i></a>]
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">135</DIV></center><p></small></td>
 </tr>
@@ -3786,7 +3788,7 @@
 	<hr>
 	<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p033-049Ch03.html#p43">p. 43</a>
 	</small></td>
-	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">141</DIV></center><p></small></td><td VALIGN=top>&nbsp;</td>
+	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">141</DIV></center><p></small></td>
 </tr>
 <tr>
 	<td><a name="para397"></a>
@@ -4137,7 +4139,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>God Passes By</i>, <a href="../../SE/GPB/p321-401FourthPeriod.html#para123">p. 383</a>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Asl-i-Kullu'l-Khayr"><i>Asl-i-Kullu'l-Khayr</i></a>]
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">153</DIV></center><p></small></td>
 </tr>
@@ -4384,7 +4386,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p227-238Ch16.html#p235">p. 235</a>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Lawh-i-Maqsúd"><i>Lawh-i-Maqsúd</i></a>]
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">159</DIV></center><p></small></td>
 </tr>
@@ -4883,7 +4885,7 @@
 	<td VALIGN=top><small>
 	1. Muhammad Husayn, one of the early believers of Shíráz, surnamed 'Vafá' (Fidelity) by Bahá'u'lláh.
 	<hr>
-	<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p205-213Ch14.html">ch. 14</a>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Súriy-i-Vafá"><i>Súriy-i-Vafá</i></a>]
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">179</DIV></center><p></small></td>
 </tr>
@@ -5179,7 +5181,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p227-238Ch16.html#p236">p. 236</a>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Lawh-i-Síyyid-i-Mihdíy-i-Dahají"><i>Lawh-i-Síyyid-i-Mihdíy-i-Dahají</i></a>]
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">193</DIV></center><p></small></td>
 </tr>
@@ -5313,7 +5315,7 @@
 	Should anyone perceive the sweetness of the following passage in the Tablet revealed in honor of Nabíl of Qá'in, <sup><small>1</small></sup> he would readily comprehend the significance of assistance: Human utterance is an essence which aspireth to exert its influence and needeth moderation. As to its influence, this is conditional upon refinement, which in turn is dependent upon hearts which are detached and pure. As to its moderation, this hath to be combined with tact and wisdom as prescribed in the Holy Scriptures and Tablets.
 	</td>
 	<td VALIGN=top><small>
-	1. Nabíl-i-Akbar. See p. 135.
+	1. Nabíl-i-Akbar. See <a href="#p135">p. 135</a>.
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -5407,7 +5409,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para243">p. 200</a>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para292">p. 219</a>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para324">p. 232</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p091-102Ch06.html">ch. 6</a>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Lawh-i-Burhán"><i>Lawh-i-Burhán</i></a>]
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">203</DIV></center><p></small></td>
 </tr>
@@ -5431,7 +5433,7 @@
 </tr>
 <tr>
 	<td rowspan="2"><a name="para574"/><a name="p205"/>
-	He is the Almighty, the All-Knowing, the All-Wise! The winds of hatred have encompassed the Ark of Bathá, <sup><small>1</small></sup> by reason of that which the hands of the oppressors have wrought. O Báqir! Thou hast pronounced sentence against them for whom the books of the world have wept, and in whose favor the scriptures of all religions have testified. Thou, who art gone far astray, art indeed wrapt in a thick veil. By God Himself! Thou hast pronounced judgment against them through whom the horizon of faith hath been illumined. Unto this bear witness They Who are the Dawning-Places of Revelation and the Manifestations of the Cause of thy Lord, the Most Merciful, Who have sacrificed Their souls and all that They possessed in His straight Path. The Faith of God hath cried everywhere, by reason of thy tyranny, and yet thou disportest thyself and art of them that exult. There is no hatred in Mine heart for thee nor for anyone. Every man of learning beholdeth thee, and such as are like thee, engulfed in evident folly. Hadst thou realized that which thou hast done, thou wouldst have cast thyself into the fire, or abandoned thine home and fled into the mountains, or wouldst have groaned until thou hadst returned unto the place destined for thee by Him Who is the Lord of strength and of might. O thou who art even as nothing! Rend thou asunder the veils of idle fancies and vain imaginings, that thou mayest behold the Day-Star of knowledge shining from this resplendent Horizon. Thou hast torn in pieces a remnant of the Prophet Himself, and imagined that thou hadst helped the Faith of God. Thus hath thy soul prompted thee, and thou art truly one of the heedless. Thine act hath consumed the hearts of the Concourse on high, and those of such as have circled round the Cause of God, the Lord of the worlds. The soul of the Chaste One <sup><small>2</small></sup> melted, by reason of thy cruelty, and the inmates of Paradise wept sore in that blessed Spot.
+	He is the Almighty, the All-Knowing, the All-Wise! The winds of hatred have encompassed the Ark of Bathá, <sup><small>1</small></sup> by reason of that which the hands of the oppressors have wrought. O Báqir! Thou hast pronounced sentence against them for whom the books of the world have wept, and in whose favor the scriptures of all religions have testified. Thou, who art gone far astray, art indeed wrapt in a thick veil. By God Himself! Thou hast pronounced judgment against them through whom the horizon of faith hath been illumined. Unto this bear witness They Who are the Dawning-Places of Revelation and the Manifestations of the Cause of thy Lord, the Most Merciful, Who have sacrificed Their souls and all that They possessed in His straight Path. The Faith of God hath cried everywhere, by reason of thy tyranny, and yet thou disportest thyself and art of them that exult. There is no hatred in Mine heart for thee nor for anyone. Every man of learning beholdeth thee, and such as are like thee, engulfed in evident folly. Hadst thou realized that which thou hast done, thou wouldst have cast thyself into the fire, or abandoned thine home and fled into the mountains, or wouldst have groaned until thou hadst returned unto the place destined for thee by Him Who is the Lord of strength and of might. O thou who art even as nothing! Rend thou asunder the veils of idle fancies and vain imaginings, that thou mayest behold the Day-Star of knowledge shining<a name="p206"></a> from this resplendent Horizon. Thou hast torn in pieces a remnant of the Prophet Himself, and imagined that thou hadst helped the Faith of God. Thus hath thy soul prompted thee, and thou art truly one of the heedless. Thine act hath consumed the hearts of the Concourse on high, and those of such as have circled round the Cause of God, the Lord of the worlds. The soul of the Chaste One <sup><small>2</small></sup> melted, by reason of thy cruelty, and the inmates of Paradise wept sore in that blessed Spot.
 	</td>
 	<td VALIGN=top rowspan="2"><small>
 	1. Mecca.<p>
@@ -5612,7 +5614,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p413-424Ch26.html#p419">p. 419</a>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Kitáb-i-'Ahdí"><i>Kitáb-i-'Ahd</i></a>]
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">217</DIV></center><p></small></td>
 </tr>
@@ -5772,7 +5774,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p239-256Ch17.html#p240">p. 240</a>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Lawh-i-Ard-i-Bá"><i>Lawh-i-Ard-i-Bá</i></a>]
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">225</DIV></center><p></small></td>
 </tr>
@@ -6167,6 +6169,9 @@
 	</td>
 	<td VALIGN=top><small>
 	1. Muhammad Javád-i-Qazvíní, upon whom Bahá'u'lláh bestowed the title Ismu'lláhi'l-Júd (The Name of God, Bounty). He transcribed numerous Tablets of Bahá'u'lláh during His Ministry, but subsequently broke the Covenant. (See <i>God Passes By</i> pages <a href="../../SE/GPB/p235-320ThirdPeriod.html#para24">247</a> and <a href="../../SE/GPB/p235-320ThirdPeriod.html#para171">319</a>.)
+	<hr>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#UnnamedTablettoMuhammad-Javád-i-Qazvíní">Tablet to Muhammad-Javád-i-Qazvíní</a>]<p>
+	<a href="#para230"><i>Kalimát-i-Firdawsíyyih</i></a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
